--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>this is the begining of something great</h1>
+    <h2>testing out header sizes</h2>
+    <h3>and things gets smaller and smaller</h3>
+    <h4>soon it will just be regular text</h4>
+    <h5>soon we are at the smallest header</h5>
+    <h6>and now we are there</h6>
 </body>
 </html>
