--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div class="nav-wrapper blue darken-4" >
               <a href="#" class="brand-logo right">Logo</a>
               <ul id="nav-mobile" class="left hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
+                <li><a href="sass.html">info</a></li>
+                <li><a href="badges.html">stock</a></li>
+                <li><a href="collapsible.html">checkout</a></li>
                 <a class="waves-effect waves-light btn">button</a>
                 <a class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>connect</a>
                 <a class="waves-effect waves-light btn"><i class="material-icons right">cloud</i>disconnect</a>
@@ -31,7 +31,7 @@
         <h3 class="purple darken-1">and things gets smaller and smaller</h3>
         <h4 class="red darken-1">soon it will just be regular text</h4>
         <h5 class="yellow darken-2">soon we are at the smallest header</h5>
-        <h6 class="orange lighten-4">and now we are there</h6>
+        <h6 class="orange darken-3">and now we are there</h6>
   </div>
 </body>
 <!-- Compiled and minified JavaScript -->
